--- a/quantum_networks.ipynb
+++ b/quantum_networks.ipynb
@@ -5,13 +5,13 @@
    "id": "3004abcd",
    "metadata": {},
    "source": [
-    "# Quantum networks in the quantum cloud\n",
+    "## Quantum networks in the quantum cloud\n",
     "Suppose, we have different quantum processors (with different parameters) connected through a classical network, then what is the most efficient way to provide link between  any two quantum processors?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "37f00408",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
    "id": "f0aee6b7",
    "metadata": {},
    "source": [
-    "# Entanglement generation (nodes)\n",
+    "## Entanglement generation (nodes)\n",
     "We could start with entangled link generation between two nodes. \n",
     "Strategy: Try to create entangled pairs between \"m\" qubits. in case, none of them suceed, try again (try \"neg\" times). \n",
     "Probability of getting one pair (prob) = (1-(1-p)**(neg*m))\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fbe816ad",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "    dist = param[i][j][0]\n",
     "    latt = param[i][j][3]\n",
     "    pc = (param[i][j][1])#coupling efficiency\n",
-    "    p = (pc**2)* math.exp(-dist/latt)\n",
+    "    p = 0.5*(pc**2)* math.exp(-dist/latt)\n",
     "    num_pairs = math.ceil(param[i][j][2]/len(list(G.edges(i)))) #number of pairs (edges) for one elink\n",
     "    rate = 0\n",
     "    for neg in range(1,10):\n",
@@ -94,17 +94,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee9d531",
+   "id": "7ed33844",
    "metadata": {},
    "source": [
-    "# Optimization with cost function\n",
-    "\n",
-    "The optimized path is obtained by calculating by defining a cost function and find the path that yields the minimum cost"
+    "## Optimization with cost function\n",
+    "The optimized path is obtained by defining a cost function and find the path that yields the minimum cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f31467ab",
    "metadata": {},
    "outputs": [
@@ -112,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The opimum path to connect nodes 1 and 6 based on the cost function is [1, 3, 5, 6]\n"
+      "The optimum path to connect nodes 1 and 6 based on the cost function is [1, 3, 5, 6]\n"
      ]
     }
    ],
@@ -128,10 +127,11 @@
     "        if node_1 > node_2:\n",
     "            node_1 = node_2\n",
     "            node_2 = paths[a][b]\n",
+    "            \n",
     "        elink[node_1][node_2]= elink_edges(G, node_1,node_2, param_matrix)  \n",
     "for i in range(len(paths)):\n",
     "    cost[i], qubits_tot[i], time[i] = rate(paths[i], elink)\n",
-    "print(\"The opimum path to connect nodes\", node_a, \"and\", node_b, \"based on the cost function is\" ,paths[cost.index(min(cost))])"
+    "print(\"The optimum path to connect nodes\", node_a, \"and\", node_b, \"based on the cost function is\" ,paths[cost.index(min(cost))])"
    ]
   }
  ],
