--- a/quantum_networks.ipynb
+++ b/quantum_networks.ipynb
@@ -71,10 +71,11 @@
     "    p = 0.5*(pc**2)* math.exp(-dist/latt)\n",
     "    num_pairs = math.ceil(param[i][j][2]/len(list(G.edges(i)))) #number of pairs (edges) for one elink\n",
     "    rate = 0\n",
+    "    prob_max=0\n",
     "    for neg in range(1,10):\n",
     "        prob = (1-(1-p)**(neg*num_pairs)) #probability\n",
     "        time = neg*dist/(2*1e5)\n",
-    "        if prob/time > rate:\n",
+    "        if prob > prob_max:\n",
     "            rate = prob*(1/time)\n",
     "            qubits = num_pairs\n",
     "            prob_max = prob\n",
@@ -111,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The optimum path to connect nodes 1 and 6 based on the cost function is [1, 3, 5, 6]\n"
+      "The optimum path to nodes 1 and 6 based on the cost function is [1, 3, 5, 6]\n"
      ]
     }
    ],
@@ -131,8 +132,16 @@
     "        elink[node_1][node_2]= elink_edges(G, node_1,node_2, param_matrix)  \n",
     "for i in range(len(paths)):\n",
     "    cost[i], qubits_tot[i], time[i] = rate(paths[i], elink)\n",
-    "print(\"The optimum path to connect nodes\", node_a, \"and\", node_b, \"based on the cost function is\" ,paths[cost.index(min(cost))])"
+    "print(\"The optimum path to nodes\", node_a, \"and\", node_b, \"based on the cost function is\" ,paths[cost.index(min(cost))])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e4e573",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
